src/component/MenuGrid/MenuGrid.style.scss
.MenuGrid {
    height: 100%;
    left: 0;
    pointer-events: none;
    position: fixed;
    width: 100vw;

    &-Content {
        background-color: var(--white);
        height: 390px;
        left: 13px;
        margin: 0 auto;
        pointer-events: all;
        width: 1410px;

        span, a {
            color: var(--black);
        }

        a {
            font-weight: 500;
        }
    }

    &-Columns {
        display: flex;
        height: 100%;
    }

    &-Column {
        border: 0;
        margin: 20px 0 30px 35px;
        width: 25%;

        &:not(:last-child) {
            border-right: solid 1px var(--grey);
        }

        span {
            text-transform: uppercase;
            width: 100%;
        }

        &-Content {
            display: flex;
            flex-direction: column;
            flex-wrap: wrap;
            height: 290px;
            justify-content: flex-start;
            margin-top: 10px;

            a {
                box-sizing: border-box;
                margin: 0;
                max-width: 50%;
            }
        }
    }

    @include before-desktop {
        position: relative;

        &-Content {
            height: 100%;
            margin: 0;
            width: 280px;

            a {
                border-bottom: 1px solid var(--light-grey);
            }
        }

        &-Columns {
            flex-direction: column;

            :last-child {
                margin-right: 0;
            }

            > div {
                margin: 0;
            }
        }

        &-Column {
            line-height: 30px;
            width: 100%;

            &-Content {
                grid-auto-flow: row;
                grid-template-columns: auto;
                overflow: scroll;
                width: 260px;

                a {
                    line-height: 50px;
                    margin-left: 10px;
                }
            }
        }
    }

    @include desktop {
        &-Content {
            &_isArabic {
                left: -28px;

                .MenuGrid {
                    &-Column {
                        border-left: solid 1px var(--grey);
                        border-right: 0;
                        margin-left: 0;
                        margin-right: 35px;

                        &:nth-last-child(1) {
                            border-left: 0;
                        }
                    }
                }
            }
        }
    }
}

